Fix carousel control icons

--- a/assets/css/galeria.css
+++ b/assets/css/galeria.css
@@ -47,3 +47,7 @@ a:hover {
     color: black;
     text-decoration: none;
 }
+
+.carousel-control-next, .carousel-control-prev {
+    filter: invert(50%);
+}
