--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,38 @@
-body {
-    background-color: rgb(255, 236, 240);
+:root {
+    --farm-pink: #D45487;
+    --background-pink: rgb(255, 230, 230);
 }
 
-header img {
-    min-height: 40px;
+@font-face {
+    font-family: 'linka';
+    src: url('../fonts/linka.ttf');
+}
+
+body {
+    background-color: var(--background-pink);
+}
+
+/* Navbar */
+nav {
+    background-color: var(--farm-pink);
+}
+
+nav * {
+    font-family: linka;
+    color: white;
+    font-size: 1.5rem;
+}
+
+nav a {
+    text-decoration: none;
+    margin: 0 1rem;
+}
+
+nav a:hover {
+    color: var(--background-pink);
+}
+
+/* Footer */
+footer {
+    padding: 3rem;
 }
