Fix welcome page favicon

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'linka';
-    src: url('../fonts/linka.ttf');
+    src: url('../fonts/linka.ttf') format('truetype');
 }
 
 body {
