--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -22,7 +22,7 @@ nav {
     background-color: var(--highlight-background);
 }
 
-nav * {
+ul * {
     font-family: linka;
     color: var(--highlight-text);
     font-size: 1.5rem;
@@ -30,7 +30,6 @@ nav * {
 
 nav h1 {
     color: var(--highlight-text) !important;
-    text-align: justify;
 }
 
 nav a {
@@ -39,10 +38,6 @@ nav a {
 }
 
 nav a:hover {
-    color: var(--text-color);
-}
-
-nav span {
     color: var(--text-color);
 }
 
